# todo-tasks

./: .tasks.json  Makefile  aliases.sh  main.py  pyproject.toml  readme.md
src/: cli.py  data.py  editor.py  entrypoint.py  errors.py  logic.py  models.py  time.py  types.py  view.py
src/controllers/: __init__.py  init.py  task.py
src/repositories/: __init__.py  base.py  errors.py  global_config.py  task.py
src/view/: __init__.py  basic_list_view.py  basic_list_view_with_projects.py  basic_table_view.py  basic_table_view_with_projects.py  item_mixin.py  list.py  table.py
tasks/: cli.py  editor.py  logic.py  models.py  time.py  view.py
tests/: test_tasks.py
